# folio

./: LICENSE  NOTICE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
public/fonts/: Monoton-OFL.txt
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  vault.rs
src/components/: ConfirmDialog.tsx  ContextMenu.tsx  DiaryStats.tsx  Editor.tsx  FolderSettings.tsx  FontPicker.tsx  IconPicker.tsx  MarkdownEditor.tsx  PasswordPrompt.tsx  Sidebar.tsx  ThemePanel.tsx  TypingDots.tsx
src/lib/: api.ts  icons.tsx  livePreview.ts  stats.ts  themes.ts
