[package]
name = "folio"
version = "0.1.0"
description = "Folio — an encrypted local markdown journal"
authors = ["Folio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "folio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }

# IDs
uuid = { version = "1", features = ["v4"] }
